# AIforLanguageLearning

./: .gitattributes  .gitignore  CHANGELOG_MODULE_E.md  README.md  _netstat.txt  _netstat2.txt  _tasklist.csv  _tasklist.txt  package-lock.json  package.json  pytest_output.txt
.github/: PULL_REQUEST_TEMPLATE_MODULE_E.md
NewBasicMoudules/part_d_security/security_part_core/: .jwt_secret  auth_core.py  auth_core.py.bak  auth_routes.py  auth_routes_old.py  main.py  pyproject.toml  rbac.py  redis_store.py  user_store.py
NewBasicMoudules/part_d_security/security_part_core/#Console_txt/: HANDOVER.md  INTEGRATION_GUIDE.md  requirements.txt  交接文档汇总.md  打包清单.md
NewBasicMoudules/part_d_security/security_part_core/scripts/: check_templates.py  debug_template.py
NewBasicMoudules/part_d_security/security_part_core/static/css/: style.css
NewBasicMoudules/part_d_security/security_part_core/static/js/: auth.js  auth_secure.js
NewBasicMoudules/part_d_security/security_part_core/templates/: index.html  index.html.bak  index.html.bak2  login.html  login.html.backup  login.html.bak2  register.html  register.html.bak2
NewBasicMoudules/part_d_security/security_part_core/test_Script/: test_idor1.py  test_token.py
app/: copilot  jest.config.cjs  package-lock.json  package.json  test-import.js  tsconfig.json
backend/: ecosystem.config.js  jest.config.js  package-lock.json  package.json  reset_admin.ts  tsconfig.json
backend_fastapi/: README.md  alembic.ini  docker-compose.dev.yml  docker-compose.infra.yml  pyproject.toml
backend_fastapi/alembic/: env.py
backend_fastapi/alembic/versions/: 5151f4ec6575_initial_migration.py
backend_fastapi/app/: context_store.py  db.py  llm.py  logging.py  main.py  model_router.py  models.py  ocr.py  prompts.py  retry_utils.py  runtime_config.py  settings.py  token_utils.py  tts.py  voice_stream.py
backend_fastapi/app/application/: db_learning.py  db_student.py  db_vocabulary.py
backend_fastapi/app/domain/: models.py
backend_fastapi/app/domain/knowledge_graph/: __init__.py  client.py  models.py  service.py
backend_fastapi/app/domain/srs/: __init__.py  sm2.py
backend_fastapi/app/infrastructure/: db_user.py  dependencies.py  rbac.py  security.py
backend_fastapi/app/infrastructure/messaging/: __init__.py  celery_app.py  tasks.py
backend_fastapi/app/infrastructure/persistence/: __init__.py
backend_fastapi/app/infrastructure/persistence/cache/: __init__.py  redis_cache.py
backend_fastapi/app/infrastructure/persistence/search/: __init__.py  es_client.py
backend_fastapi/app/infrastructure/storage/: __init__.py  minio_storage.py
backend_fastapi/app/infrastructure/telemetry/: __init__.py  metrics.py  tracing.py
backend_fastapi/app/interfaces/: admin_router.py  auth_router.py  knowledge_graph_router.py  storage_router.py  tasks_router.py
backend_fastapi/app/prompts/: essay_grade.j2  voice_system_prompt.j2
backend_fastapi/app/routers/: auth.py  compat_legacy.py  compat_v5.py  essays.py  learning.py  model_routing.py  system.py  vocab.py  voice.py
backend_fastapi/data/: runtime_config.json
backend_fastapi/scripts/: asr_probe_faster_whisper.py  run_dev.ps1  start_infra.py
backend_fastapi/tests/: test_auth_http.py  test_auth_migration.py  test_celery_tasks.py  test_compat_legacy_http.py  test_compat_v5_http.py  test_context_store.py  test_cors_voice_http.py  test_es_search.py  test_essay_http.py  test_health.py  test_integration_llm_vocab.py  test_integration_voice_asr.py  test_knowledge_graph_router.py  test_learning_http.py  test_model_router.py  test_model_router_fallback.py  test_redis_cache.py  test_retry_utils.py  test_settings_default_port.py  test_srs_sm2.py  test_system_config_http.py  test_vocab_http.py  test_voice_http.py  test_ws_echo.py  test_ws_essay_grade.py  test_ws_vocab_lookup.py  test_ws_voice_audio.py  test_ws_voice_audio_binary.py  test_ws_voice_audio_binary_replay_and_barge_in.py  test_ws_voice_barge_in.py  test_ws_voice_context_memory.py  test_ws_voice_tts_chunk.py
docs/: AI_Language_Learning_Full_Lifecycle_Market_Research.md  AI_Language_Learning_Market_Research_Report.md  AI_Language_Learning_Performance_Requirements.md  AI_Language_Learning_System_Architecture.md  AI_Language_Learning_Technology_Stack_Research.md  Detailed_System_Architecture.md  Edge_Cloud_Collaborative_Vision_Technical_Research.md  Edge_Cloud_Performance_Benchmark_and_Tech_Stack.md  MIGRATION_MILESTONES_FASTAPI.md  System_Modules_Detailed_Explanation.md  development_guide.7z  team_performance_analysis.md
env_check/: BLACKWELL_BUILD_ROUTES.md  E2E_TEST_REPORT.md  E2E_TEST_REPORT_MEDIUM.md  Linux_GPU_ONLY_SETUP.md  ORT_GPU_ONLY_SETUP.md  ORT_GPU_ONLY_SETUP_LINUX.md  TRT_SETUP.md  WSL2_Migration_Search_Checklist.md  WSL2_Risks_and_Validation.md  XTTS_GPU_SETUP.md  build_ort_win.ps1  (+36 more)
(+369 files in other folders)
