[project]
name = "aiforforeignlanguagelearning-backend"
version = "0.1.0"
description = "FastAPI backend for AI for Foreign Language Learning (migration)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools]
packages = ["app"]
include-package-data = false

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic-settings>=2.2",
  "sqlmodel>=0.0.21",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "httpx>=0.27",
  "jinja2>=3.1",
  "structlog>=24.1",
  "webrtcvad>=2.0.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-timeout>=2.3",
  "ruff>=0.6",
  "soundfile>=0.12",
  "librosa>=0.10",
]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
markers = [
  "integration: requires real external services/models (LM Studio/ASR/TTS), skipped by default",
]

# 防止测试在 ws.receive_json() 等阻塞点无限等待。
# Windows 推荐 thread 模式。
timeout = 60
timeout_method = "thread"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
