[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-part"
version = "1.0.0"
description = "AIЭтгябЇЯАЯЕЭГ - АВШЋШЯжЄФЃПщ"
readme = "HANDOVER.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Team Member D", email = "security@example.com"}
]
keywords = ["fastapi", "jwt", "authentication", "security", "rbac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
]

dependencies = [
    # FastAPI ПђМм
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # УмТыЙўЯЃ
    "bcrypt>=4.1.0",
    
    # JWT ДІРэ
    "python-jose[cryptography]>=3.3.0",
    
    # Ъ§ОнбщжЄ
    "pydantic[email]>=2.5.0",
    
    # Redis жЇГж
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    # ДњТыжЪСП
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    
    # ВтЪд
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    
    # ЕїЪд
    "ipython>=8.16.0",
]

[project.urls]
Homepage = "https://github.com/example/ai-language-learning"
Documentation = "https://github.com/example/ai-language-learning/docs"
Repository = "https://github.com/example/ai-language-learning.git"
Issues = "https://github.com/example/ai-language-learning/issues"

[tool.hatch.build.targets.wheel]
packages = ["security_part"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["security_part"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
